# nsuds

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  configure.ac  gen.c  gen.h  grid.c  grid.h  nsuds.c  nsuds.h  timer.c  timer.h
helpfiles/: main
src/: Makefile.am  config.h.in  dialog.c  dialog.h  gen.c  gen.h  grid.c  grid.h  help.c  help.h  high_scores  highscores.c  highscores.h  marks.c  marks.h  menu.c  menu.h  nsuds.1  nsuds.c  nsuds.h  score.c  score.h  scroller.c  scroller.h  timer.c  timer.h  util.c  util.h
